# music_server

./: .gitignore  Cargo.toml
migrations/: 20240430114455_remove_tracks.sql  20240430114726_create_tracks.sql  20240430114829_update_tracks.sql
src/: db.rs  main.rs
src/api_handler/: mod.rs
src/api_handler/music_api/: mod.rs
src/track/: aiff.rs  flac.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
templates/: index.html.tera
