[package]
name = "music_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
serde = "1.0.198"
serde_json = "1.0.116"
wavers = "1.4.0"
mp3-metadata = "0.3.4"
ws = { package = "rocket_ws", version = "0.1.0" }
tera = "1.0"
sqlx = { version = "0.7.1", features = ["postgres", "uuid", "runtime-tokio-rustls"]}
uuid = "0.8.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]